# platformer_clone

./: .gitignore  CMakeLists.txt  README.md  make_folder.bat
data/: preloaded_data.h
data/levels/: 1_1.level  1_2.level  1_3.level  1_4.level  main_menu.level
source/: all_entities.h  audio_player.cpp  audio_player.h  common.h  data.cpp  data.h  editor.cpp  editor.h  entity.cpp  entity.h  game.cpp  game.h  input.cpp  input.h  level.cpp  level.h  level_transition.cpp  level_transition.h  main.cpp  main_menu.cpp  main_menu.h  maths.cpp  maths.h  opengl_abs.cpp  opengl_abs.h  renderer.cpp  renderer.h  save_data.cpp  save_data.h
source/entities/: background.cpp  background.h  bowser.cpp  bowser.h  camera_region.cpp  camera_region.h  fire_bar.cpp  fire_bar.h  goomba.cpp  goomba.h  koopa.cpp  koopa.h  level_entities.cpp  level_entities.h  moving_platform.cpp  moving_platform.h  piranha.cpp  piranha.h  player.cpp  player.h  power_up.cpp  power_up.h  tilemap.cpp  tilemap.h
